# iparq

./: README.md  pyproject.toml
.agents/skills/iparq-parquet-inspector/: SKILL.md
.agents/skills/iparq-parquet-inspector/agents/: openai.yaml
.github/: copilot.yml
.github/workflows/: ai-catalog.yml  copilot-setup-steps.yml  merge.yml  python-package.yml  python-publish.yml  test.yml
.well-known/: ai-catalog.json
catalog-site/: index.html  index.md  llms.txt  pricing.md  robots.txt  sitemap.xml
catalog-site/docs/: index.html
src/iparq/: source.py
tests/: test_ai_catalog.py  test_cli.py
