[project]
name = "iparq"
version = "0.6.0"
description = "Inspect Parquet metadata, encodings, compression, indexes, and Bloom filters"
readme = "README.md"
authors = [
    { name = "MiguelElGallo", email = "miguel.zurcher@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
checks = [
    "mypy>=2.3.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[project.scripts]
iparq = "iparq.source:app"

[project.urls]
Homepage = "https://iparq.dev/"
Documentation = "https://iparq.dev/docs/"
Repository = "https://github.com/MiguelElGallo/iparq"
Issues = "https://github.com/MiguelElGallo/iparq/issues"

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
